# c-algo-playground

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/data_structures/: binary_tree.h  hashmap.h  linkedlist.h  queue.h  stack.h
include/utils/: data_types.h  nodes.h
src/: CMakeLists.txt  main.c
src/data_structures/: binary_tree.c  hashmap.c  linkedlist.c  llist.c  queue.c  stack.c
src/data_structures/hashmap/: hashmap.c  hashmap.h
src/data_structures/linked_list/: llist.c  llist.h
src/data_structures/stack/: stack.c  stack.h
src/utils/: data_types.c  data_types.h
tests/: CMakeLists.txt  hashmap_tests.c  linked_list_tests.c
